--- a/css/style.css
+++ b/css/style.css
@@ -93,60 +93,38 @@ button:hover {
     opacity: 1;
 }
 
-.strike {
-    position: absolute;
-    background-color: rgb(0, 0, 0);
+/* .one {
+    background-color: green;
 }
 
-.strike-row-1 {
-    width: 340px;
-    height: 6px;
-    top: 135px;
+.two {
+    background-color: green;
 }
 
-.strike-row-2 {
-    width: 340px;
-    height: 6px;
-    top: 246px;
+.three {
+    background-color: green;
 }
 
-.strike-row-3 {
-    width: 340px;
-    height: 6px;
-    top: 356px;
+.four {
+    background-color: green;
 }
 
-.strike-colum-1 {
-    width: 6px;
-    height: 320px;
-    margin-left: 50px;
+.five {
+    background-color: green;
 }
 
-.strike-colum-2 {
-    width: 6px;
-    height: 320px;
-    margin-left: 167px;
+.six {
+    background-color: green;
 }
 
-.strike-colum-3 {
-    width: 6px;
-    height: 320px;
-    margin-left: 284px;
+.seven {
+    background-color: green;
 }
 
-.strike-diagonal-1 {
-    width: calc(325px*1.41);
-    border-bottom: 6px solid rgb(0, 0, 0);
-    transform: rotate(43deg);
-    transform-origin: left;
-    margin-left: 3px;
+.eight {
+    background-color: green;
 }
 
-.strike-diagonal-2 {
-    width: calc(325px*1.42);
-    border-bottom: 6px solid rgb(0, 0, 0);
-    transform: rotate(-43deg);
-    transform-origin: left;
-    margin-top: 314px;
-
-}
+.nine {
+    background-color: green;
+} */
